# perception-triage

./: .gitignore  LICENSE  README.md  failures.db  gt.json  preds.json  pyproject.toml
scripts/: build_failures.py  make_synth.py
src/perception_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/triage/: __init__.py  cli.py  confusion.py  db.py  failures.py  matching.py  schema.py
