[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perception-triage"
version = "0.1.0"
description = "Perception error triage engine (MVP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "tabulate>=0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
